--- a/ConnectFourXNA/ConnectFourXNA/ConnectFourXNA/ConnectFourXNA.csproj
+++ b/ConnectFourXNA/ConnectFourXNA/ConnectFourXNA/ConnectFourXNA.csproj
@@ -112,6 +112,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="ResourceManager.cs" />
+    <Compile Include="Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
